--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-bootstrap": "^2.7.0",
+    "react-burger-menu": "^3.0.8",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
@@ -96,6 +97,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-burger-menu": "^2.8.3",
     "@types/react-scroll": "^1.8.5",
     "file-loader": "^6.2.0"
   },
