--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@analytics/google-tag-manager": "^0.5.3",
     "@babel/core": "^7.16.0",
     "@chakra-ui/icons": "^2.0.12",
     "@chakra-ui/react": "^2.4.1",
@@ -20,6 +21,7 @@
     "@types/node": "^12.20.55",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "analytics": "^0.8.1",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-named-asset-import": "^0.3.8",
